Embed responsive video about working with EHR data

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,9 @@ nav:
 
 theme: material
 
+extra_css:
+    - css/youtube.css
+
 markdown_extensions:
     - pymdownx.highlight
     - pymdownx.superfences
