Restructure study def into subsections
Also adds some new brief intro text to each page, and some new copy
about thinking about null dates

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,9 @@ nav:
       - Github repository layout: repositories.md
       - Study definitions:
           - Overview: study-def.md
+          - Working with dates: study-def-dates.md
+          - Working with codelists: study-def-codelists.md
+          - Dummy data and expectations: study-def-expectations.md
           - Variable reference: study-def-variables.md
           - Measures: measures.md
       - Codelists:
