--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,13 @@ jobs:
         with:
           python-version: '3.7'
 
+      - name: Upgrade pip
+        run: |
+          python3 -m pip install --upgrade pip
+
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python3 -m pip install -r ./requirements.txt
 
       - name: Check site builds
         run: mkdocs build --strict
