--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -111,6 +111,7 @@ markdown_extensions:
       permalink: "&#128279;"
   - pymdownx.highlight
   - pymdownx.superfences
+  - pymdownx.tabbed
   - pymdownx.keys
   - admonition
   - footnotes
