Move details of Gitpod workspaces to own page
Away from Getting Started. It's useful background detail for people
who choose to use Gitpod for working with OpenSAFELY, but for those just
testing things out, it's a distraction. Those "trial" users shouldn't
ever encounter any of the limits: the demonstration takes a short time
to work through and it's, by default, in a public repository.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - Reference:
       - Detailed installation guides:
           - Overview: install-intro.md
+          - Managing Gitpod workspaces: gitpod-workspaces.md
           - GitHub and Git: install-github-and-git.md
           - Python: install-python.md
           - Docker: install-docker.md
