--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,9 @@ extra_css:
   - css/youtube.css
   - css/extra.css
 
+extra_javascript:
+  - js/extra.js
+
 extra:
   social:
     - icon: fontawesome/brands/github
