--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
       - Developing a protocol: protocol.md
       - Using Git effectively: git-workflow.md
       - Code reviews: code-reviews.md
+      - Publishing your Gihub Repository: publishing-repo.md
   - Support:
       - Overview: requests-intro.md
       - Requesting new libraries: requests-packages.md
