--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
               - Intensive care admissions (covid-19 only): dataset-icnarc.md
               - In-hospital deaths (covid-19 only): dataset-cpns.md
               - Registered deaths: dataset-onsdeaths.md
+      - Permissions in OpenSAFELY: permissions.md
   - Good practice:
       - Overview: good-practice-intro.md
       - The DataLab Open Manifesto: open-data-manifesto.md
