Add "news" to the navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,7 +62,7 @@ nav:
       - Requesting new libraries: requests-packages.md
       - Requesting study definition variables: requests-variables.md
   - Updating the documentation: requests-documentation.md
-
+  - Platform News: news.md
 theme:
   name: material
   font: false
