fix: use emoji instead of character code
* was not displaying correctly

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,7 +113,7 @@ markdown_extensions:
   - pymdownx.snippets:
       check_paths: true
   - toc:
-      permalink: "&#128279;"
+      permalink: "🔗"
   - pymdownx.highlight
   - pymdownx.superfences
   - pymdownx.tabbed
