Add reusable actions section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ nav:
       - Actions:
           - Overview: actions-intro.md
           - Scripted actions: actions-scripts.md
+          - Reusable actions: actions-reusable.md
           - The `cohortextractor` action: actions-cohortextractor.md
           - The project pipeline: actions-pipelines.md
       - Job server: job-server.md
