rename permissions menu item

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,7 +50,7 @@ nav:
           - The project pipeline: actions-pipelines.md
       - Job server: job-server.md
       - Release files from the server: releasing-files.md
-      - Permissions in OpenSAFELY: permissions.md
+      - Permissions: permissions.md
   - OpenSAFELY best practice:
       - Overview: good-practice-intro.md
       - The DataLab Open Manifesto: open-data-manifesto.md
