Switch pymdownx.tabbed to alternate tab style
The legacy tab style is no longer supported by mkdocs-material version
8.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,7 +115,8 @@ markdown_extensions:
       permalink: "🔗"
   - pymdownx.highlight
   - pymdownx.superfences
-  - pymdownx.tabbed
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.keys
   - admonition
   - footnotes
