Apply repo-template tooling
Notably:
* bring in justfile (without check, fix, & test)
* set up run to execute mkdocs serve
* move requirements.{in,txt} -> requirements.prod.{in,txt}

--- a/requirements.dev.in
+++ b/requirements.dev.in
@@ -1,3 +1,7 @@
--r requirements.txt
+--constraint requirements.prod.txt
+
+# Additional dev requirements
+# To generate a requirements file that includes both prod and dev requirements, run:
+# pip-compile --generate-hashes --output-file=requirements.dev.txt requirements.dev.in
 
 pip-tools
