Install mkdocs-opensafely-backend-contracts

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,6 +110,7 @@ plugins:
       custom_templates: templates
       watch:
         - examples
+  - contracts
 
 markdown_extensions:
   - pymdownx.snippets:
