Install mkdocs-opensafely-backend-contracts

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,7 @@ plugins:
             show_if_no_docstring: true
             heading_level: 4
       custom_templates: templates
+  - contracts
 
 markdown_extensions:
   - pymdownx.snippets:
