Set up backend contracts page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,8 @@ nav:
       - Developing a protocol: protocol.md
       - Using Git effectively: git-workflow.md
       - Code reviews: code-reviews.md
+  - Building for OpenSAFELY:
+      - Backend Contracts: backend-contracts.md
   - Support:
       - How to get help: requests-intro.md
       - Requesting new libraries: requests-packages.md
