--- a/databuilder/requirements.prod.in
+++ b/databuilder/requirements.prod.in
@@ -2,5 +2,8 @@
 
 # To generate requirements file, run:
 # pip-compile --generate-hashes --output-file=requirements.prod.txt requirements.prod.in
-https://github.com/opensafely-core/databuilder/archive/refs/tags/v0.18.3.zip
 snex
+
+# Dependabot doesn't seem to touch this dependency, likely because it's pinned,
+#so we have a script to update it, run: just databuilder/upgrade-databuilder
+https://github.com/opensafely-core/databuilder/archive/refs/tags/v0.18.3.zip
