--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
               - Intensive care admissions (covid-19 only): dataset-icnarc.md
               - In-hospital deaths (covid-19 only): dataset-cpns.md
               - Registered deaths: dataset-onsdeaths.md
+              - Covid-19 therapeutics: dataset-therapeutics.md
       - Access policies: access-policies.md
   - Getting Started guide: getting-started.md
   - Using OpenSAFELY:
