Add technical architecture diagrams
System context and container diagrams, showing the different components
of OpenSafely and how they fit into the wider context. These diagrams
are written in the [C4 model](https://c4model.com/) style. They are
intended to assist with communication inside and outside of the team.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
               - Registered deaths: dataset-onsdeaths.md
               - Covid-19 therapeutics: dataset-therapeutics.md
       - Access policies: access-policies.md
+      - Technical architecture: technical-architecture.md
   - Getting Started guide: getting-started.md
   - Using OpenSAFELY:
       - Analysis workflow: workflow.md
