Update email address
Use the new Bennett Institute email.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,7 +96,7 @@ extra:
       link: https://twitter.com/opensafely
       name: OpenSAFELY on Twitter
 
-copyright: © University of Oxford for the Bennett Institute for Applied Data Science. This work may be copied freely for non-commercial research and study. If you wish to do any of the other acts restricted by the copyright you should apply in writing to ebmdatalab@phc.ox.ac.uk.
+copyright: © University of Oxford for the Bennett Institute for Applied Data Science. This work may be copied freely for non-commercial research and study. If you wish to do any of the other acts restricted by the copyright you should apply in writing to bennett@phc.ox.ac.uk.
 
 plugins:
   - search
