Split author and reviewer code review sections

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,7 +62,8 @@ nav:
       - Using Git effectively: git-workflow.md
       - Code reviews:
           - Using code reviews: code-reviews.md
-          - How to request and complete a code review: code-reviews-pull-request.md
+          - How to request a code review: code-reviews-for-authors.md
+          - How to review code: code-reviews-for-reviewers.md
       - Case-control studies: case-control-studies.md
   - Support:
       - How to get help: how-to-get-help.md
