Change Platform News page to a redirect
We are moving this to the main OpenSAFELY site, with the goal to
eventually allow people to sign up for notifications of changes.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,7 @@ nav:
       - Requesting new libraries: requesting-libraries.md
       - Requesting study definition variables: requesting-variables.md
       - Updating the documentation: updating-the-docs.md
-  - Platform News: news.md
+  - Platform News: https://www.opensafely.org/changelog/
 
 theme:
   name: material
