Fail link check if there are inaccessible links
There are currently no errors, so we can now allow failures on new
errors.

--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -19,5 +19,6 @@ jobs:
         uses: lycheeverse/lychee-action@v1.4.1
         with:
           args: "--exclude-mail --require-https --verbose --no-progress './**/*.md' './**/*.html'"
+          fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
