--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -11,14 +11,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Build the docs
+      - name: Install dependencies
         uses: actions/setup-python@v3
         with:
           python-version: "3.8.12"
           cache: "pip"
-      - run: |
-          pip install -r requirements.txt
-          mkdocs build --strict
+        run: pip install -r requirements.txt
+
+      - name: Build the docs
+        run: mkdocs build --strict
 
       # - name: Publish
       #   uses: cloudflare/pages-action@1
