--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -11,11 +11,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install dependencies
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: "3.8.12"
           cache: "pip"
+
+      - name: Install dependencies
         run: pip install -r requirements.txt
 
       - name: Build the docs
