feat: document some very basic timing and monitoring

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,7 @@ nav:
       - Using Git effectively: git-workflow.md
       - Code reviews: code-reviews.md
       - Case-control studies: case-control-studies.md
+      - Timings and monitoring: timings-monitoring.md
   - Support:
       - How to get help: how-to-get-help.md
       - Requesting new libraries: requesting-libraries.md
