Use `--exclude-all-private` flag
While we're here editing the command arguments.

This excludes private IP addresses from checks.

None of these come up yet, but:

* we are using this flag in the `opensafely.org` checks
* we don't want to check private IP addresses

So let's add it for consistency, in the event that we factor out these
workflows into a single shared one.

--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Check links
         uses: lycheeverse/lychee-action@v1.5.0
         with:
-          args: "--exclude-mail --include-verbatim --require-https --verbose --no-progress './**/*.md' './**/*.html'"
+          args: "--exclude-all-private --exclude-mail --include-verbatim --require-https --verbose --no-progress './**/*.md' './**/*.html'"
           fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
