--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -108,7 +108,7 @@ plugins:
       default_handler: python
       handlers:
         python:
-          rendering:
+          options:
             show_root_heading: true
             show_root_toc_entry: false
             show_root_full_path: false
